[gd_scene load_steps=4 format=3 uid="uid://blrog106sxsy3"]

[ext_resource type="Texture2D" uid="uid://dxio335c5rhys" path="res://assets/apple.png" id="1_o5qli"]
[ext_resource type="Texture2D" uid="uid://cbpis3xi3xrd8" path="res://assets/bg.png" id="1_sugp2"]
[ext_resource type="Script" uid="uid://4ikmu1ipanhr" path="res://scripts/apple.gd" id="2_0wfyh"]

[node name="Main" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(579.444, 322.75)
scale = Vector2(0.613426, 0.613426)
texture = ExtResource("1_sugp2")

[node name="Apple" type="Sprite2D" parent="."]
position = Vector2(552, 230)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_o5qli")
script = ExtResource("2_0wfyh")

[node name="AppleText" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 365.0
offset_top = 62.0
offset_right = 740.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 75
text = "オムライス"
horizontal_alignment = 1

[node name="UpgradeButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 406.0
offset_top = 312.0
offset_right = 705.0
offset_bottom = 427.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "サンプル
テキスト"

[node name="ClickPowerButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 406.0
offset_top = 454.0
offset_right = 705.0
offset_bottom = 569.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "サンプル
テキスト"

[connection signal="pressed" from="UpgradeButton" to="Apple" method="_on_button_pressed"]
[connection signal="pressed" from="ClickPowerButton" to="Apple" method="_on_click_power_button_pressed"]
